[project]
name = "poker_table"
version = "0.1.0"
description = "poker_table using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
]

[project.scripts]
kickoff = "poker_table.main:kickoff"
plot = "poker_table.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"